[gd_scene load_steps=3 format=4 uid="uid://ca1dcepidnu8m"]

[ext_resource type="PackedScene" uid="uid://ch1hh04p5qvav" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/Base/PropertiesBase.tscn" id="1"]
[ext_resource type="Script" uid="uid://dxch3kcghvn1f" path="res://Prefab/GUI/LevelEditor/Inspector/Properties/Type/Color/PropertiesColor.gd" id="2"]

[node name="PropertiesColor" instance=ExtResource("1")]
light_mask = 0
offset_right = 109.0
offset_bottom = 31.0
script = ExtResource("2")

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="color_changed" from="HBoxContainer/ColorPickerButton" to="." method="ValueChange"]
